--- a/package.json
+++ b/package.json
@@ -7,10 +7,12 @@
     "build": "next build",
     "start": "next start",
     "lint": "next lint",
-    "export": "next build && next export"
+    "export": "next build && next export",
+    "test": "vitest --run --reporter=verbose",
+    "test:watch": "vitest"
   },
   "dependencies": {
-    "next": "12.1.5",
+    "next": "12.1.6",
     "react": "18.0.0",
     "react-dom": "18.0.0",
     "react-toggle-dark-mode": "1.0.4",
@@ -18,13 +20,19 @@
     "styled-theming": "2.2.0"
   },
   "devDependencies": {
-    "@types/node": "17.0.25",
-    "@types/react": "18.0.5",
-    "@types/react-dom": "18.0.1",
+    "@testing-library/jest-dom": "5.16.4",
+    "@testing-library/react": "13.2.0",
+    "@types/node": "17.0.33",
+    "@types/react": "18.0.9",
+    "@types/react-dom": "18.0.4",
     "@types/styled-components": "5.1.25",
     "@types/styled-theming": "2.2.5",
-    "eslint": "8.13.0",
-    "eslint-config-next": "12.1.5",
-    "typescript": "4.6.3"
+    "@vitejs/plugin-react": "1.3.2",
+    "c8": "7.11.3",
+    "eslint": "8.15.0",
+    "eslint-config-next": "12.1.6",
+    "jsdom": "19.0.0",
+    "typescript": "4.6.4",
+    "vitest": "0.12.6"
   }
 }
