--- a/package.json
+++ b/package.json
@@ -2,6 +2,9 @@
   "name": "retfu.github.io",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "node": ">=18.12"
+  },
   "scripts": {
     "dev": "next dev",
     "build": "next build",
